Creation micro Transaction - modify Account

--- a/credit/src/main/resources/application.yml
+++ b/credit/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
 
 management:  endpoint:    health:      show-details: always
   endpoints:    web:      exposure:        include: health, info, metrics
+
+# Configure Logging
+logging:
+  level:
+    root: INFO
