--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -2,12 +2,16 @@ spring:
   application:    name: account
   config:
      import: optional:configserver:http://localhost:8888
+       
 #  cloud:#    config:#      uri: http://localhost:8888
 
-management:  endpoint:    health:      show-details: always
-  endpoints:    web:      exposure:        include: health, info, metrics
-        
-# Configure Logging
-logging:
-  level:
-    root: INFO
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics
+
+    
