--- a/springConfigServer/account.yml
+++ b/springConfigServer/account.yml
@@ -14,8 +14,16 @@ spring:
       port: 27017
       database: account
 
+eureka:
+ client:
+   service-url:
+     defaultZone: http://localhost:8761/eureka
 
-#eureka:
-# client:
-#   service-url:
-#     defaultZone: http://localhost:8761/eureka
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics
