--- a/springConfigServer/credit.yml
+++ b/springConfigServer/credit.yml
@@ -14,7 +14,16 @@ spring:
       port: 27017
       database: credits
 
-#eureka:
-# client:
-#   service-url:
-#     defaultZone: http://localhost:8761/eureka
+eureka:
+ client:
+   service-url:
+     defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics
