--- a/EurekaServer/pom.xml
+++ b/EurekaServer/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.everis</groupId>
 	<artifactId>EurekaServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>EurekaServer</name>
 	<description>Eureka Server para docker application</description>
 	<properties>
