--- a/EurekaServer/src/main/resources/application.yml
+++ b/EurekaServer/src/main/resources/application.yml
@@ -3,12 +3,14 @@ spring:
     name: eureka-server
  
 #Tomcat Embedded Server Configuration
-server: 
+server:  
   port: 8761
- 
+  
 #Eureka Configuration Properties
 eureka:
   client:
-    registerWithEureka: false #tener en cuenta para cuando se despliegue en docker
+    registerWithEureka: false 
     fetchRegistry: false
-  server:    enable-self-preservation: true
+  server:
+    wait-time-in-ms-when-sync-empty: 0
+  instance:    hostname: eureka-server    
