--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 spring:
   application:    name: account
   config:
-     import: optional:configserver:http://localhost:8888
-       
-#  cloud:#    config:#      uri: http://localhost:8888
+     import: optional:configserver:http://config-server:8888
 
+#  cloud:
+#    config:#      uri: http://localhost:8888
 
-    
