--- a/centralized-configuration-service/pom.xml
+++ b/centralized-configuration-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.everis</groupId>
 	<artifactId>centralized-configuration-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>centralized-configuration-service</name>
 	<description>Microservicio para account - Bootcamp</description>
 	<properties>
@@ -26,8 +26,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
