--- a/account/pom.xml
+++ b/account/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.everis</groupId>
 	<artifactId>account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>account</name>
 	<description>Microservicio para account - Bootcamp</description>
 	<properties>
