--- a/cloudGateway/src/main/resources/application.yml
+++ b/cloudGateway/src/main/resources/application.yml
@@ -1,1 +1,1 @@
-spring:  application:    name: api-gateway  config:     import: optional:configserver:http://localhost:8888
+spring:  application:    name: api-gateway  config:      import: optional:configserver:http://config-server:8888#     import: optional:configserver:http://localhost:8888
