--- a/configServer/src/main/resources/application.yml
+++ b/configServer/src/main/resources/application.yml
@@ -4,29 +4,29 @@ server:
 eureka:
   client:
     service-url:
-#      defaultZone: http://eureka-server:8761/eureka
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
+#      defaultZone: http://localhost:8761/eureka
         
 spring:  
   application:
     name: config-server  
     
   profiles:
-#    active: git
-    active: native
+    active: git
+#    active: native
     
 
-  cloud:
-    config:
-      server:
-       native:
-          search-locations: file:///C:/Users/jmagalmo/Documents/proyectos/1_springConfigServer
-          
 #  cloud:
 #    config:
-#      server:          
-#       git: 
-#          uri: https://github.com/jhoss64gEveris/files-config-server
-#          username: jhoss64gEveris
-#          password: systeM64@
-#       default-label: main
+#      server:
+#       native:
+#          search-locations: file:///C:/Users/jmagalmo/Documents/proyectos/1_springConfigServer
+          
+  cloud:
+    config:
+      server:          
+       git: 
+          uri: https://github.com/jhoss64gEveris/files-config-server
+          username: jhoss64gEveris
+          password: systeM64@
+       default-label: main
