--- a/ms-account/src/main/resources/application.yml
+++ b/ms-account/src/main/resources/application.yml
@@ -2,4 +2,5 @@ spring:
   application:
     name: account
   config:
-     import: optional:configserver:http://localhost:8888
+     import: optional:configserver:http://config-server:8888
+#     import: optional:configserver:http://localhost:8888
